--- a/src/pages/register/register.hbs
+++ b/src/pages/register/register.hbs
@@ -1,21 +1,21 @@
-<form>
-  <h1>Регистрация</h1>
-  <fieldset>
-    <label>
-      <span>Почта</span>
-      <input type="email">
+<form class="auth-form">
+  <h1 class="auth-form__title">Регистрация</h1>
+  <fieldset class="auth-form__fields">
+    <label class="auth-form__field">
+      <span class="auth-form__label">Почта</span>
+      <input class="auth-form__input" name="email" type="email">
     </label>
-    <label>
-      <span>Логин</span>
-      <input type="text">
+    <label class="auth-form__field">
+      <span class="auth-form__label">Логин</span>
+      <input class="auth-form__input" name="login" type="text">
     </label>
-    <label>
-      <span>Имя</span>
-      <input type="text">
+    <label class="auth-form__field">
+      <span class="auth-form__label">Имя</span>
+      <input class="auth-form__input" name="name" type="text">
     </label>
-    <label>
-      <span>Фамилия</span>
-      <input type="text">
+    <label class='auth-form__field'>
+      <span class="auth-form__label">Фамилия</span>
+      <input class="auth-form__input" name="last-name" type="text">
     </label>
     <label>
       <span>Телефон</span>
