feat: add classes to profile

--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,4 +1,4 @@
-<form class="auth-form">
+<form name="login" class="auth-form">
   <h1 class="auth-form__title">Вход</h1>
   <fieldset class="auth-form__fields">
     <label class="auth-form__field">
