--- a/src/pages/messanger/messanger.hbs
+++ b/src/pages/messanger/messanger.hbs
@@ -1,10 +1,10 @@
-<div>
-  <div>
-    <a href="/profile">Профиль</a>
-    <form>
-      <input placeholder="Поиск" type="text">
+<div class="messanger">
+  <div class="messanger__sidebar">
+    <a class="messager__link" href="/profile">Профиль</a>
+    <form class="messander__search-form" name="search">
+      <input class="messanger__search-input" name="search" placeholder="Поиск" type="text">
     </form>
-    <ul>
+    <ul class="messanger__chats">
       <li>
         <img src="" alt="avatar">
         <div>
