--- a/src/pages/serverErrorPage/serverErrorPage.hbs
+++ b/src/pages/serverErrorPage/serverErrorPage.hbs
@@ -1,5 +1,5 @@
-<div>
-  <h1>500</h1>
-  <p>Мы уже фиксим</p>
-  <a href="/">Мы уже фиксим</a>
+<div class="error">
+  <h1 class="error__title">500</h1>
+  <p class="error__text">Мы уже фиксим</p>
+  <a class="error__link" href="/">Мы уже фиксим</a>
 </div>
