--- a/src/pages/notFoundPage/notFoundPage.hbs
+++ b/src/pages/notFoundPage/notFoundPage.hbs
@@ -1,5 +1,5 @@
-<div>
-  <h1>404</h1>
-  <p>Не туда попали</p>
-  <a href="/">Мы уже фиксим</a>
+<div class="error">
+  <h1 class="error__title">404</h1>
+  <p class="error__text">Не туда попали</p>
+  <a class="error__link" href="/">Мы уже фиксим</a>
 </div>
