--- a/src/pages/messanger/messanger.hbs
+++ b/src/pages/messanger/messanger.hbs
@@ -1,24 +1,309 @@
-<div class="messanger">
-  <div class="messanger__sidebar">
-    <a class="messager__link" href="/profile">Профиль</a>
-    <form class="messander__search-form" name="search">
-      <input class="messanger__search-input" name="search" placeholder="Поиск" type="text">
+<main class="messanger">
+  <div class="messanger__side-bar side-bar">
+    <a class="messanger__profile-link" href="/profile">Профиль</a>
+    <form class="messanger__search-form" name="search">
+      <label class="messanger__search-label">
+        <span class="messanger__search-placeholder">
+          <img src="/src/images/search-icon.svg" class="messanger__search-icon" alt="search">
+          <span class="messanger__search-text">Поиск</span>
+        </span>
+        <input class="messanger__search-input" name="search" placeholder=" " type="text">
+      </label>
     </form>
     <ul class="messanger__chats">
-      <li>
-        <img src="" alt="avatar">
-        <div>
-          <h4>Андрей</h4>
-          <p>Изображение</p>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
         </div>
-        <div>
-          <p>10:49</p>
-          <p>2</p>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
+        </div>
+      </li>
+      <li class="chat-preview">
+        <img class="chat-preview__avatar" src="/src/images/default-avatar.png" alt="avatar">
+        <div class="chat-preview__content">
+          <div class="chat-preview__head">
+            <h4 class="chat-preview__name">Андрей</h4>
+            <p class="chat-preview__time">10:49</p>
+          </div>
+          <div class="chat-preview__info">
+            <p class="chat-preview__last-message">Изображение</p>
+            <p class="chat-preview__unread">2</p>
+          </div>
         </div>
       </li>
     </ul>
   </div>
-  <div>
-    <p>Выберите чат чтобы отправить сообщение</p>
+  <div class="messanger__chat-window chat-window">
+    <!--    <p class="chat-window__default-message">Выберите чат чтобы отправить сообщение</p>-->
+    <header class="chat-window__header">
+      <img class="chat-window__avatar" src="/src/images/default-avatar.png" alt="avatar">
+      <h3 class="chat-window__name">Вадим</h3>
+      <button class="chat-window__options-button"></button>
+    </header>
+    <div class="chat-window__chat chat">
+      <p class="chat__date">19 июня</p>
+      <p class="chat__message chat__message_incoming">
+        Привет! Смотри, тут всплыл интересный кусок лунной космической истории — НАСА в какой-то момент попросила
+        Хассельблад адаптировать модель SWC для полетов на Луну. Сейчас мы все знаем что астронавты летали с моделью 500
+        EL — и к слову говоря, все тушки этих камер все еще находятся на поверхности Луны, так как астронавты с собой
+        забрали только кассеты с пленкой.<br/><br/>
+        Хассельблад в итоге адаптировал SWC для космоса, но что-то пошло не так и на ракету они так никогда и не попали.
+        Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро.
+        <span class="chat__message-data chat__message-data_incoming">11:56</span>
+      </p>
+      <img class="chat__image chat__image_incoming" src="" alt="">
+      <p class="chat__message chat__message_outgoing">
+        Круто!
+        <span class="chat__message-data chat__message-data_outgoing">
+          <div class="chat__message-status chat__message-status_success"></div>
+          12:00
+        </span>
+      </p>
+    </div>
+    <form class="chat-window__form" action="">
+      <button class="chat-window__file-button"></button>
+      <input placeholder="Сообщение" class="chat-window__message-input" type="text">
+      <button type="submit" class="chat-window__submit"></button>
+    </form>
   </div>
-</div>
+</main>
