--- a/src/pages/notFoundPage/notFoundPage.hbs
+++ b/src/pages/notFoundPage/notFoundPage.hbs
@@ -1,5 +1,1 @@
-<div class="error">
-  <h1 class="error__title">404</h1>
-  <p class="error__text">Не туда попали</p>
-  <a class="error__link" href="/">Мы уже фиксим</a>
-</div>
+{{> ErrorPage href='/' error='404' message="Не туда попали" linkText="Назад к чатам"}}
