--- a/src/pages/serverErrorPage/serverErrorPage.hbs
+++ b/src/pages/serverErrorPage/serverErrorPage.hbs
@@ -1,5 +1,1 @@
-<div class="error">
-  <h1 class="error__title">500</h1>
-  <p class="error__text">Мы уже фиксим</p>
-  <a class="error__link" href="/">Мы уже фиксим</a>
-</div>
+{{> ErrorPage href='/' error='500' message="Мы уже фиксим" linkText="Назад к чатам"}}
