--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,17 +1,19 @@
-<form name="login" class="auth-form">
-  <h1 class="auth-form__title">Вход</h1>
-  <fieldset class="auth-form__fields">
-    <label class="auth-form__field">
-      <span class="auth-form__label">Логин</span>
-      <input class="auth-form__input" name="login" type="text">
-    </label>
-    <label class="auth-form__field">
-      <span class="auth-form__label">Пароль</span>
-      <input class="auth-form__input" name="password" type="password">
-    </label>
-  </fieldset>
-  <div class="auth-form__actions">
-    <button class="auth-form__button" type="submit">Авторизоваться</button>
-    <a class="auth-form__link" href="/sign-in">Нет аккаунта?</a>
-  </div>
-</form>
+<main class="auth app__auth">
+  <form name="login" class="auth-form">
+    <h1 class="auth-form__title">Вход</h1>
+    <fieldset class="auth-form__fields">
+      <label class="auth-form__field">
+        <span class="auth-form__label">Логин</span>
+        <input class="auth-form__input" name="login" type="text">
+      </label>
+      <label class="auth-form__field">
+        <span class="auth-form__label">Пароль</span>
+        <input class="auth-form__input" name="password" type="password">
+      </label>
+    </fieldset>
+    <div class="auth-form__actions">
+      <button class="auth-form__button" type="submit">Авторизоваться</button>
+      {{> Link href="/sign-up" class="auth-form__link" data-page="/sign-up" text="Нет аккаунта?"}}
+    </div>
+  </form>
+</main>
