--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -1,40 +1,44 @@
-<div class="side-bar">
-  <button class="side-bar__button" type="button"></button>
-</div>
-<div class="profile">
-  <img src="" class="profile__avatar" alt="avatar">
-  <h2 class="profile__name">Иван</h2>
-  <form name="profile" class="profile__form">
-    <fieldset class="profile__fields">
-      <label class="profile__field">
-        <span class="profile__label">Почта</span>
-        <input class="profile__input" name="email" type="email">
-      </label>
-      <label class="profile__field">
-        <span class="profile__label">Логин</span>
-        <input class="profile__input" name="login" type="text">
-      </label>
-      <label class="profile__field">
-        <span class="profile__label">Имя</span>
-        <input class="profile__input" name="name" type="text">
-      </label>
-      <label class="profile__field">
-        <span class="profile__label">Фамилия</span>
-        <input class="profile__input" name="last-name" type="text">
-      </label>
-      <label class="profile__field">
-        <span class="profile__label">Имя в чате</span>
-        <input class="profile__input" name="nickname" type="text">
-      </label>
-      <label class="profile__field">
-        <span class="profile__label">Телефон</span>
-        <input class="profile__input" name="tel" type="tel">
-      </label>
-    </fieldset>
-    <div class="profile__actions">
-      <button class="profile__button" type="button">Изменить данные</button>
-      <button class="profile__button" type="button">Изменить пароль</button>
-      <button class="profile__button" type="button">Выйти</button>
-    </div>
-  </form>
-</div>
+<main class="profile">
+  <nav class="profile__side-bar side-bar">
+    <a href="/" class="side-bar__back-button" data-page="/"></a>
+  </nav>
+  <div class="profile__content">
+    <button type="button" class="profile__avatar">
+      <img src="/src/images/default-avatar.png" class="profile__avatar-image" alt="avatar">
+    </button>
+    <h2 class="profile__name">Иван</h2>
+    <form name="profile" class="profile__form">
+      <fieldset class="profile__fields">
+        <label class="profile__field">
+          <span class="profile__label">Почта</span>
+          <input class="profile__input" name="email" value="pochta@yandex.ru" type="email">
+        </label>
+        <label class="profile__field">
+          <span class="profile__label">Логин</span>
+          <input class="profile__input" name="login" value="ivanivanov" type="text">
+        </label>
+        <label class="profile__field">
+          <span class="profile__label">Имя</span>
+          <input class="profile__input" name="name" value="Иван" type="text">
+        </label>
+        <label class="profile__field">
+          <span class="profile__label">Фамилия</span>
+          <input class="profile__input" name="last-name" value="Иванов" type="text">
+        </label>
+        <label class="profile__field">
+          <span class="profile__label">Имя в чате</span>
+          <input class="profile__input" name="nickname" value="Иван" type="text">
+        </label>
+        <label class="profile__field">
+          <span class="profile__label">Телефон</span>
+          <input class="profile__input" name="tel" value="+7 (909) 967 30 30" type="tel">
+        </label>
+      </fieldset>
+      <div class="profile__actions">
+        <button class="profile__button profile__button_change" type="button">Изменить данные</button>
+        <button class="profile__button profile__button_change" type="button">Изменить пароль</button>
+        <button class="profile__button profile__button_exit" type="button">Выйти</button>
+      </div>
+    </form>
+  </div>
+</main>
