--- a/src/pages/messanger/messanger.hbs
+++ b/src/pages/messanger/messanger.hbs
@@ -289,15 +289,12 @@
         забрали только кассеты с пленкой.<br/><br/>
         Хассельблад в итоге адаптировал SWC для космоса, но что-то пошло не так и на ракету они так никогда и не попали.
         Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро.
-        <span class="chat__message-data chat__message-data_incoming">11:56</span>
+        <span class="chat__message-data chat__message-data_type_incoming">11:56</span>
       </p>
-      <img class="chat__image chat__image_incoming" src="" alt="">
+      <img class="chat__image chat__image_incoming" src="/src/images/chat-image-template.png" alt="">
       <p class="chat__message chat__message_outgoing">
         Круто!
-        <span class="chat__message-data chat__message-data_outgoing">
-          <div class="chat__message-status chat__message-status_success"></div>
-          12:00
-        </span>
+        <span class="chat__message-data chat__message-data_status_read chat__message-data_type_outgoing">12:00</span>
       </p>
     </div>
     <form class="chat-window__form" action="">
