feat: add new components

--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -12,7 +12,7 @@
       </label>
     </fieldset>
     <div class="auth-form__actions">
-      <button class="auth-form__button" type="submit">Авторизоваться</button>
+      <button class="auth-form__button" type="submit">Войти</button>
       {{> Link href="/sign-up" class="auth-form__link" data-page="/sign-up" text="Нет аккаунта?"}}
     </div>
   </form>
