--- a/src/pages/messanger/messanger.hbs
+++ b/src/pages/messanger/messanger.hbs
@@ -299,7 +299,7 @@
     </div>
     <form class="chat-window__form" action="">
       <button class="chat-window__file-button"></button>
-      <input placeholder="Сообщение" class="chat-window__message-input" type="text">
+      <input placeholder="Сообщение" class="chat-window__message-input" name="messagemessage" type="text">
       <button type="submit" class="chat-window__submit"></button>
     </form>
   </div>
