--- a/src/pages/register/register.hbs
+++ b/src/pages/register/register.hbs
@@ -12,15 +12,15 @@
       </label>
       <label class="auth-form__field">
         <span class="auth-form__label">Имя</span>
-        <input class="auth-form__input" name="name" required minlength="2" maxlength="80" type="text">
+        <input class="auth-form__input" name="first_name" required minlength="2" maxlength="80" type="text">
       </label>
       <label class='auth-form__field'>
         <span class="auth-form__label">Фамилия</span>
-        <input class="auth-form__input" name="last-name" required minlength="2" maxlength="80" type="text">
+        <input class="auth-form__input" name="last_name" required minlength="2" maxlength="80" type="text">
       </label>
       <label class='auth-form__field'>
         <span class="auth-form__label">Телефон</span>
-        <input class="auth-form__input" name="tel" required type="tel">
+        <input class="auth-form__input" name="phone" required type="tel">
       </label>
       <label class='auth-form__field'>
         <span class="auth-form__label">Пароль</span>
@@ -28,7 +28,7 @@
       </label>
       <label class='auth-form__field'>
         <span class="auth-form__label">Пароль (ещё раз)</span>
-        <input class="auth-form__input" name="password-repeat" minlength="8" required type="password">
+        <input class="auth-form__input" name="password_repeat" minlength="8" required type="password">
       </label>
     </fieldset>
     <div class="auth-form__actions">
