--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -19,19 +19,19 @@
         </label>
         <label class="profile__field">
           <span class="profile__label">Имя</span>
-          <input class="profile__input" name="name" value="Иван" type="text">
+          <input class="profile__input" name="first_name" value="Иван" type="text">
         </label>
         <label class="profile__field">
           <span class="profile__label">Фамилия</span>
-          <input class="profile__input" name="last-name" value="Иванов" type="text">
+          <input class="profile__input" name="last_name" value="Иванов" type="text">
         </label>
         <label class="profile__field">
           <span class="profile__label">Имя в чате</span>
-          <input class="profile__input" name="nickname" value="Иван" type="text">
+          <input class="profile__input" name="display_name" value="Иван" type="text">
         </label>
         <label class="profile__field">
           <span class="profile__label">Телефон</span>
-          <input class="profile__input" name="tel" value="+7 (909) 967 30 30" type="tel">
+          <input class="profile__input" name="phone" value="+7 (909) 967 30 30" type="tel">
         </label>
       </fieldset>
       <div class="profile__actions">
