--- a/src/pages/register/register.hbs
+++ b/src/pages/register/register.hbs
@@ -32,8 +32,8 @@
       </label>
     </fieldset>
     <div class="auth-form__actions">
-      <button class="auth-form__button" type="submit">Зарегистрироваться</button>
-      {{> Link href="/sign-in" class="auth-form__link" data-page="/sign-in" text="Войти"}}
+      {{> Button type="submit" text="Зарегистрироваться"}}
+      {{> Link href="/sing-in" class="auth-form__link" page="/sing-in" text="Войти"}}
     </div>
   </form>
 </main>
