--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  position: relative;
 
   &__error {
     margin: auto;
@@ -37,5 +38,83 @@
     background-position: center;
     background-size: 11px 10px;
     padding: 0;
+  }
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: none;
+  visibility: hidden;
+  transition: display 0.5s linear, visibility 0.5s linear;
+
+  &_open {
+    visibility: visible;
+    display: flex;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  &__container {
+    background-color: #fff;
+    margin: auto;
+    border-radius: 12px;
+    box-shadow: 0px 0px 6px 0px #00000024;
+    padding: 40px 30px;
+    max-width: 340px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
+
+.file-form {
+  &__title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    margin: 0 0 43px 0;
+    color: #1E1E1E;
+  }
+
+  &__field {
+    display: block;
+    position: relative;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    text-decoration: underline;
+    color: #3369F3;
+    max-width: 122px;
+    margin: 0 auto 45px auto;
+  }
+
+  &__input {
+    position: absolute;
+    z-index: -1;
+    visibility: hidden;
+    display: block;
+    width: 0;
+    height: 0;
+  }
+
+  &__button {
+    width: 100%;
   }
 }
