--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -12,8 +12,8 @@
       </label>
     </fieldset>
     <div class="auth-form__actions">
-      <button class="auth-form__button" type="submit">Войти</button>
-      {{> Link href="/sign-up" class="auth-form__link" data-page="/sign-up" text="Нет аккаунта?"}}
+      {{> Button type="submit" text="Войти"}}
+      {{> Link href="/sign-up" class="auth-form__link" page="/sing-up" text="Нет аккаунта?"}}
     </div>
   </form>
 </main>
