--- a/src/pages/messanger/messanger.scss
+++ b/src/pages/messanger/messanger.scss
@@ -113,83 +113,6 @@
   }
 }
 
-.chat-preview {
-  display: grid;
-  grid-template-columns: 47px 1fr;
-  gap: 10px;
-  padding: 12px 0;
-  border-top: 1px solid #EAEAEA;
-
-  &__avatar {
-    width: 100%;
-    border-radius: 50%;
-    background-color: #EFEFEF;
-    aspect-ratio: 1/1;
-  }
-
-  &__content {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-  }
-
-  &__head {
-    display: flex;
-    gap: 20px;
-  }
-
-  &__info {
-    display: flex;
-    gap: 20px;
-    height: 100%;
-  }
-
-  &__name {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    font-size: 13px;
-    line-height: 13px;
-    color: #1E1E1E;
-  }
-
-  &__time {
-    margin: 0 0 0 auto;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 9px;
-    line-height: 13px;
-    color: #999999;
-  }
-
-  &__last-message {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 15px;
-    color: #999999;
-  }
-
-  &__unread {
-    margin: 0 0 0 auto;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 11px;
-    color: #fff;
-    background-color: #3369F3;
-    border-radius: 50%;
-    padding: 4px;
-    aspect-ratio: 1/1;
-    min-width: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-self: flex-end;
-  }
-}
-
 .chat-window {
   display: flex;
   flex-direction: column;
@@ -241,6 +164,11 @@
     border-top: 1px solid #EAEAEA;
     border-bottom: 1px solid #EAEAEA;
     padding: 30px 0;
+    max-height: 100%;
+    overflow: auto;
+    overflow: -moz-scrollbars-none;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
   }
 
   &__form {
@@ -297,87 +225,31 @@
 }
 
 .chat {
-  &__message {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 15px;
-    color: #1E1E1E;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
+  &__block {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     max-width: 45%;
-    padding: 11px;
-    width: fit-content;
-    position: relative;
 
-    &_incoming {
-      background-color: #F8F8F8;
-      border-radius: 0px 12px 12px 12px;
-
-      &:after {
-        content: '';
-        margin-left: 40px;
-      }
-    }
-
-    &_outgoing {
-      margin-left: auto;
-      background-color: #E4EDFD;
-      border-radius: 12px 12px 0 12px;
-
-      &:after {
-        content: '';
-        margin-left: 50px;
-      }
-    }
-  }
-
-  &__message-data {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 9px;
-    line-height: 9px;
-    position: absolute;
-    bottom:11px;
-    right: 11px;
-
-    &_type {
+    &_source {
       &_incoming {
-        color: #999999;
+        margin-right: auto;
+        align-items: flex-start;
       }
 
       &_outgoing {
-        color: #3369F3;
-      }
-    }
-
-    &_status {
-      &_send:before {
-        content: '';
-        background-image: url(../../images/send-icon.svg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        display: inline-block;
-        width: 7px;
-        height: 5px;
-        margin-right: 4px;
-      }
-
-      &_read:before {
-        content: '';
-        background-image: url(../../images/read-icon.svg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        display: inline-block;
-        width: 10px;
-        height: 5px;
-        margin-right: 4px;
+        align-items: flex-end;
+        margin-left: auto;
       }
     }
   }
 
-  &__image {
-    border: 1px solid #EAEAEA;
-    border-radius: 12px;
-    max-width: 45%;
+  &__message {
+    margin: 0;
   }
 
   &__date {
@@ -387,5 +259,6 @@
     line-height: 12px;
     text-align: center;
     color: #999999;
+    margin: 0;
   }
 }
