--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -3,42 +3,76 @@
     <a href="/" class="side-bar__back-button" data-page="/"></a>
   </nav>
   <div class="profile__content">
-    <button type="button" class="profile__avatar">
+    <button type="button" class="profile__avatar" id="edit-avatar-button">
       <img src="/src/images/default-avatar.png" class="profile__avatar-image" alt="avatar">
     </button>
     <h2 class="profile__name">Иван</h2>
-    <form name="profile" class="profile__form">
+    <form name="profile-common" class="profile__form">
       <fieldset class="profile__fields">
         <label class="profile__field">
           <span class="profile__label">Почта</span>
-          <input class="profile__input" name="email" value="pochta@yandex.ru" type="email">
+          <input disabled class="profile__input" name="email" value="pochta@yandex.ru" type="email">
         </label>
         <label class="profile__field">
           <span class="profile__label">Логин</span>
-          <input class="profile__input" name="login" value="ivanivanov" type="text">
+          <input disabled class="profile__input" name="login" value="ivanivanov" type="text">
         </label>
         <label class="profile__field">
           <span class="profile__label">Имя</span>
-          <input class="profile__input" name="first_name" value="Иван" type="text">
+          <input disabled class="profile__input" name="first_name" value="Иван" type="text">
         </label>
         <label class="profile__field">
           <span class="profile__label">Фамилия</span>
-          <input class="profile__input" name="last_name" value="Иванов" type="text">
+          <input disabled class="profile__input" name="last_name" value="Иванов" type="text">
         </label>
         <label class="profile__field">
           <span class="profile__label">Имя в чате</span>
-          <input class="profile__input" name="display_name" value="Иван" type="text">
+          <input disabled class="profile__input" name="display_name" value="Иван" type="text">
         </label>
         <label class="profile__field">
           <span class="profile__label">Телефон</span>
-          <input class="profile__input" name="phone" value="+7 (909) 967 30 30" type="tel">
+          <input disabled class="profile__input" name="phone" value="+7 (909) 967 30 30" type="tel">
         </label>
       </fieldset>
       <div class="profile__actions">
-        <button class="profile__button profile__button_change" type="button">Изменить данные</button>
-        <button class="profile__button profile__button_change" type="button">Изменить пароль</button>
-        <button class="profile__button profile__button_exit" type="button">Выйти</button>
+        <button class="profile__button profile__button_change" id="edit-common-data-button" type="button">Изменить данные</button>
+        <button class="profile__button profile__button_change" id="edit-password-button" type="button">Изменить пароль</button>
+        <button class="profile__button profile__button_exit" id="sing-out-button" type="button">Выйти</button>
+      </div>
+      <div class="profile__actions profile__actions_hide">
+        {{> Button type="submit" text="Сохранить"}}
+      </div>
+    </form>
+    <form name="profile-password" class="profile__form profile__form_hide">
+      <fieldset class="profile__fields">
+        <label class="profile__field">
+          <span class="profile__label">Старый пароль</span>
+          <input disabled class="profile__input" name="oldpassword" type="password">
+        </label>
+        <label class="profile__field">
+          <span class="profile__label">Новый пароль</span>
+          <input disabled class="profile__input" name="newpassword" type="password">
+        </label>
+        <label class="profile__field">
+          <span class="profile__label">Повторите новый пароль</span>
+          <input disabled class="profile__input" name="repeat-password" type="password">
+        </label>
+      </fieldset>
+      <div class="profile__actions">
+        {{> Button type="submit" text="Сохранить"}}
       </div>
     </form>
   </div>
 </main>
+<section id="popup-avatar-edit" class="popup">
+  <div class="popup__container">
+    <form class="file-form" name="change-avatar">
+      <h2 class="file-form__title">Загрузите файл</h2>
+      <label class="file-form__field">
+        <input class="file-form__input" name="avatar" type="file">
+        <span class="file-form__file-text">Выбрать файл на компьютере</span>
+      </label>
+      {{> Button addedClasses="file-form__button" type="submit" text="Поменять"}}
+    </form>
+  </div>
+</section>
